# rust-server-template

./: Cargo.toml  readme.md
src/: main.rs  routes.rs
src/entity/users/: auth.rs  error.rs  mod.rs  query.rs  token.rs  traits.rs
src/libs/: database.rs  error.rs  extractor.rs  mod.rs
