[package]
name = "rust-server-template"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "json", "chrono"] }
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
